--- a/index.html
+++ b/index.html
@@ -52,14 +52,14 @@
             </div>
         </div>
         <div class="grafic">
-            <img src="img/opacity1.png" alt="">
+            <img src="Img/opacity1.png" alt="">
             <h2>Las Series De YouTube Mas Vistas</h2>
             <iframe src='https://flo.uri.sh/visualisation/7035148/embed' title='Interactive or visual content' class='flourish-embed-iframe' frameborder='0' scrolling='no' style='width:100%;height:600px;' sandbox='allow-same-origin allow-forms allow-scripts allow-downloads allow-popups allow-popups-to-escape-sandbox allow-top-navigation-by-user-activation'></iframe><div style='width:100%!;margin-top:4px!important;text-align:right!important;'><a class='flourish-credit' href='https://public.flourish.studio/visualisation/7035148/?utm_source=embed&utm_campaign=visualisation/7035148' target='_top' style='text-decoration:none!important'><img alt='Made with Flourish' src='https://public.flourish.studio/resources/made_with_flourish.svg' style='width:105px!important;height:16px!important;border:none!important;margin:0!important;'> </a></div>
         </div>
 
         <div class="reff">
             <div class="reffe">
-                <img src="img/A.P Statistics.png" alt="">
+                <img src="Img/A.P Statistics.png" alt="">
                 <ul>
                     <li>
                         <a href="">Español</a>
