--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             <img src="Img/backgraund3.0.png" alt="none">
         </div>
         <div class="logo1">
-            <a href="">
+            <a href="https://apstatistics.github.io/1/">
                 <img src="Img/A.P Statistics.png" alt="aplg">
             </a>
         </div>
