--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         <nav class="nav-main">
             <ul class="nav-menu">
                 <li>
-                    <a href="">Home</a>
+                    <a href="https://apstatistics.github.io/1/">Home</a>
                 </li>
                 <li>
                     <a href="">Series</a>
@@ -45,7 +45,7 @@
                     <a href="">Canales</a>
                 </li>
                 <li>
-                    <a href="">Videos</a>
+                    <a href="https://www.youtube.com/channel/UC7pJJACats7suFVfu6ZGSfw">Videos</a>
                 </li>
             </ul>
         </nav>
