--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                     <a href="https://apstatistics.github.io/1/">Home</a>
                 </li>
                 <li>
-                    <a href="">Series</a>
+                    <a href="https://apstatistics.github.io/3/">Series</a>
                 </li>
                 <li>
                     <a href="">Canales</a>
