--- a/index.html
+++ b/index.html
@@ -68,22 +68,22 @@
                 <img src="Img/A.P Statistics.png" alt="">
                 <ul>
                     <li>
-                        <a href="">Español</a>
+                        <a href="#">Español</a>
                     </li>
                     <li>
-                        <a href="">Acuerdo de privacidad</a>
+                        <a href="https://apstatistics.github.io/4/">Acuerdo de privacidad</a>
                     </li>
                     <li>
-                        <a href="">Publicidad personalizada</a>
+                        <a href="#">Publicidad personalizada</a>
                     </li>
                     <li>
-                        <a href="">Dispositivos compatibles</a>
+                        <a href="https://https://apstatistics.github.io/4/Dispositivos.html">Dispositivos compatibles</a>
                     </li>
                     <li>
-                        <a href="">Ayuda</a>
+                        <a href="https://https://apstatistics.github.io/4/help_me.html">Ayuda</a>
                     </li>
                     <li>
-                        <a href="">Acerca de A.P+</a>
+                        <a href="https://https://apstatistics.github.io/4/Acerca%20de%20A.P.html">Acerca de A.P+</a>
                     </li>
                 </ul>
                 <p>© A.P Studios y toda su familia de compañias y asociados</p>
